Closed Bug 547894 Opened 16 years ago Closed 16 years ago

OOPP divx topcrash [@ strlen | nsDependentCString::nsDependentCString(char const*)]

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

References

Details

Attachments

(1 file)

Topcrash with divx plugin which is calling NPN_GetStringIdentifiers with null strings.
Attachment #428348 - Attachment is patch: true
Attachment #428348 - Attachment mime type: application/octet-stream → text/plain
Attachment #428348 - Flags: review?(bent.mozilla)
Attachment #428348 - Flags: review?(bent.mozilla) → review+
This landed 24-february, I forgot to mark it.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Assignee: nobody → benjamin
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: