Bug 547894 - Allow null in NPN_GetStringIdentifier(s) to fix a topcrash with the divx plugin, r=bent